--- a/prices.html
+++ b/prices.html
@@ -80,7 +80,7 @@
                         <div class="list-item"><span><i class="fas fa-paw fa-xs"></i> Border Collie</span><span>€55</span></div>
                     </li>
                     <li>
-                        <div class="list-item"><span><i class="fas fa-paw fa-xs"></i> Border Terier</span><span>€50</span></div>
+                        <div class="list-item"><span><i class="fas fa-paw fa-xs"></i> Border Terrier</span><span>€50</span></div>
                     </li>
                     <li>
                         <div class="list-item"><span><i class="fas fa-paw fa-xs"></i> Boxer</span><span>€45</span></div>
@@ -190,6 +190,90 @@
                     <li>
                         <div class="list-item"><span><i class="fas fa-paw fa-xs"></i> Malamutes</span><span>€100</span></div>
                     </li>
+                    <li>
+                        <div class="list-item"><span><i class="fas fa-paw fa-xs"></i> Maltese</span><span>€50</span></div>
+                    </li>
+                    <li>
+                        <div class="list-item"><span><i class="fas fa-paw fa-xs"></i> Mastiff</span><span>€55</span></div>
+                    </li>
+                    <li>
+                        <div class="list-item"><span><i class="fas fa-paw fa-xs"></i> Newfoundland</span><span>€100</span></div>
+                    </li>
+                    <li>
+                        <div class="list-item"><span><i class="fas fa-paw fa-xs"></i> Papillion</span><span>€50</span></div>
+                    </li>
+                    <li>
+                        <div class="list-item"><span><i class="fas fa-paw fa-xs"></i> Pekingese</span><span>€50</span></div>
+                    </li>
+                    <li>
+                        <div class="list-item"><span><i class="fas fa-paw fa-xs"></i> Pinscher</span><span>€35</span></div>
+                    </li>
+                    <li>
+                        <div class="list-item"><span><i class="fas fa-paw fa-xs"></i> Pitbull</span><span>€45</span></div>
+                    </li>
+                    <li>
+                        <div class="list-item"><span><i class="fas fa-paw fa-xs"></i> Pomeranian</span><span>€55</span></div>
+                    </li>
+                    <li>
+                        <div class="list-item"><span><i class="fas fa-paw fa-xs"></i> Poodle Toy</span><span>€55</span></div>
+                    </li>
+                    <li>
+                        <div class="list-item"><span><i class="fas fa-paw fa-xs"></i> Poodle Standard</span><span>€80</span></div>
+                    </li>
+                    <li>
+                        <div class="list-item"><span><i class="fas fa-paw fa-xs"></i> Pug</span><span>€35</span></div>
+                    </li>
+                    <li>
+                        <div class="list-item"><span><i class="fas fa-paw fa-xs"></i> Rottweiler</span><span>€55</span></div>
+                    </li>
+                    <li>
+                        <div class="list-item"><span><i class="fas fa-paw fa-xs"></i> Saint Bernard</span><span>€100</span></div>
+                    </li>
+                    <li>
+                        <div class="list-item"><span><i class="fas fa-paw fa-xs"></i> Samoyed</span><span>€90</span></div>
+                    </li>
+                    <li>
+                        <div class="list-item"><span><i class="fas fa-paw fa-xs"></i> Schnauzer mini</span><span>€55</span></div>
+                    </li>
+                    <li>
+                        <div class="list-item"><span><i class="fas fa-paw fa-xs"></i> Schnauzer Standard</span><span>€65</span></div>
+                    </li>
+                    <li>
+                        <div class="list-item"><span><i class="fas fa-paw fa-xs"></i> Schnauzer Giant</span><span>€75</span></div>
+                    </li>
+                    <li>
+                        <div class="list-item"><span><i class="fas fa-paw fa-xs"></i> Scottish Terrier</span><span>€50</span></div>
+                    </li>
+                    <li>
+                        <div class="list-item"><span><i class="fas fa-paw fa-xs"></i> Setter</span><span>€70</span></div>
+                    </li>
+                    <li>
+                        <div class="list-item"><span><i class="fas fa-paw fa-xs"></i> Shar Pei</span><span>€45</span></div>
+                    </li>
+                    <li>
+                        <div class="list-item"><span><i class="fas fa-paw fa-xs"></i> Sheepdog</span><span>€70</span></div>
+                    </li>
+                    <li>
+                        <div class="list-item"><span><i class="fas fa-paw fa-xs"></i> Shih Tzu</span><span>€50</span></div>
+                    </li>
+                    <li>
+                        <div class="list-item"><span><i class="fas fa-paw fa-xs"></i> Sib. Husky</span><span>€70</span></div>
+                    </li>
+                    <li>
+                        <div class="list-item"><span><i class="fas fa-paw fa-xs"></i> Springer Spaniel</span><span>€60</span></div>
+                    </li>
+                    <li>
+                        <div class="list-item"><span><i class="fas fa-paw fa-xs"></i> Spitz</span><span>€60</span></div>
+                    </li>
+                    <li>
+                        <div class="list-item"><span><i class="fas fa-paw fa-xs"></i> W. Highland</span><span>€50</span></div>
+                    </li>
+                    <li>
+                        <div class="list-item"><span><i class="fas fa-paw fa-xs"></i> Wheaten T.</span><span>€65</span></div>
+                    </li>
+                    <li>
+                        <div class="list-item"><span><i class="fas fa-paw fa-xs"></i> Yorkshirt T.</span><span>€50</span></div>
+                    </li>
                 </ol>
             </div>
         </div>
@@ -205,9 +289,10 @@
                     <span><a href="tel:0875553555">Call us: 0875553555<i class="fas fa-phone"></i></a></span><br>
                     <span><a href="mailto:info@doggystyle.ie">Email: info@doggystyle.ie<i class="fas fa-envelope"></i></a></span>
                 </div>
-                <div class="col-sm" id="call-button-container">
-                    <a href="contact.html">
-                    <button type="button" aria-label="Contact Doggystyle" class="call-button footer-element">Contact DoggyStyle</button></a>
+                <div class="col-sm call-button-container">
+                    <form action="contact.html" method="get">
+                        <button type="button" class="call-button footer-element" aria-label="Contact Doggystyle">Contact DoggyStyle</button>
+                    </form> 
                 </div>
                 <div class="col-sm footer-element" id="social-icons">
                     <a href="contact.html#map"> <i class="fas fa-map-marked-alt"></i></a>
@@ -223,5 +308,3 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body></html>
-
-
