--- a/gallery.html
+++ b/gallery.html
@@ -92,9 +92,10 @@
                     <span><a href="tel:0875553555">Call us: 0875553555<i class="fas fa-phone"></i></a></span><br>
                     <span><a href="mailto:info@doggystyle.ie">Email: info@doggystyle.ie<i class="fas fa-envelope"></i></a></span>
                 </div>
-                <div class="col-sm" id="call-button-container">
-                    <a href="contact.html">
-                    <button type="button" aria-label="Contact Doggystyle" class="call-button footer-element">Contact DoggyStyle</button></a>
+                <div class="col-sm call-button-container">
+                    <form action="contact.html" method="get">
+                        <button type="button" class="call-button footer-element" aria-label="Contact Doggystyle">Contact DoggyStyle</button>
+                    </form> 
                 </div>
                 <div class="col-sm footer-element" id="social-icons">
                     <a href="contact.html#map"> <i class="fas fa-map-marked-alt"></i></a>
@@ -107,7 +108,6 @@
         </div>
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
-    <script src="assets/js/lightbox-plus-jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body></html>
