--- a/prices.html
+++ b/prices.html
@@ -14,7 +14,7 @@
 
 <body class="parallax">
     <header>
-        <!--------------------------------- Navbar - Bootstrap ------------------->
+        <!--Navbar - Bootstrap -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand ml-auto" href="#"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
@@ -45,7 +45,9 @@
             </div>
         </nav>
     </header>
-    <!-- -----------------------------Prices page -------------------------------->
+
+
+    <!--Prices page -->
 
     <div class="container-fluid" id="main-prices">
         <div class="image-container">
@@ -279,9 +281,11 @@
         </div>
     </div>
         <!-- I put this 'empty space div below the contact form as I was having a problem with scrolling
-            as the bottom of the price container was dragging up white space instead of showing the background ---->
+            as the bottom of the price container was dragging up white space instead of showing the background -->
     <div class="empty-space"></div>
-    <!-- ----------------------------Footer -------------------------------->
+
+
+    <!-- Footer-->
     <footer>
         <div class="container-fluid footer-row">
             <div class="row">
