--- a/contact.html
+++ b/contact.html
@@ -92,13 +92,13 @@
             <div class="row">
                 <div class="col-sm footer-element" id="contact-details">
                     <span><a href="tel:0875553555">Call us: 0875553555<i class="fas fa-phone"></i></a></span><br>
-                    <span><a href="mailto:info@doggystyle.ie">Email: info@doggystyle.ie<i class="fas fa-envelope"></i></a></span>
+                    <span><a href="mailto:info@doggystyle.ie" target="_blank">Email: info@doggystyle.ie<i class="fas fa-envelope"></i></a></span>
                 </div>
                 
                 <div class="col-sm call-button-container contact-page-button">
                 </div>
                 <div class="col-sm footer-element" id="social-icons">
-                    <a href="contact.html#map"> <i class="fas fa-map-marked-alt"></i></a>
+                    <a href="contact.html#map" aria-label="our location"> <i class="fas fa-map-marked-alt"></i></a>
                     <a href="https://twitter.com/" aria-label="Twitter" target="_blank" rel="noopener"><i class="fab fa-twitter-square"></i></a>
                     <a href="https://www.instagram.com/" aria-label="instagram" target="_blank" rel="noopener"><i class="fab fa-instagram-square"></i></a>
                     <a href="https://www.facebook.com/" aria-label="facebook" target="_blank" rel="noopener"><i class="fab fa-facebook-square"></i></a>
