--- a/prices.html
+++ b/prices.html
@@ -49,13 +49,13 @@
 
     <!--Prices page -->
 
-    <div class="container-fluid" id="main-prices">
+    <div class="container-fluid main-prices">
         <div class="image-container">
             <img src="assets/images/pricesbone1.png" alt="dog bone with prices text">
             <p>Prices</p>
         </div>
         <div class="row">
-            <div class="list-unstyled" id="prices-banner">
+            <div class="list-unstyle prices-banner">
                 <ol>
                     <li>
                         <div class="list-item"><span><i class="fas fa-paw fa-xs"></i> Airedale Terrier</span><span>€70</span></div>
@@ -282,7 +282,9 @@
     </div>
         <!-- I put this 'empty space div below the contact form as I was having a problem with scrolling
             as the bottom of the price container was dragging up white space instead of showing the background -->
-    <div class="empty-space"></div>
+    <div class="empty-space">
+    
+    </div>
 
 
     <!-- Footer-->
@@ -291,15 +293,15 @@
             <div class="row">
                 <div class="col-sm footer-element" id="contact-details">
                     <span><a href="tel:0875553555">Call us: 0875553555<i class="fas fa-phone"></i></a></span><br>
-                    <span><a href="mailto:info@doggystyle.ie">Email: info@doggystyle.ie<i class="fas fa-envelope"></i></a></span>
+                    <span><a href="mailto:info@doggystyle.ie" target="_blank">Email: info@doggystyle.ie<i class="fas fa-envelope"></i></a></span>
                 </div>
                 <div class="col-sm call-button-container">
                     <form action="contact.html" method="get">
-                        <button type="button" class="call-button footer-element" aria-label="Contact Doggystyle">Contact DoggyStyle</button>
+                        <input type="submit" class="call-button" value="Contact DoggyStyle" aria-label="Contact Doggystyle"/>
                     </form> 
                 </div>
                 <div class="col-sm footer-element" id="social-icons">
-                    <a href="contact.html#map"> <i class="fas fa-map-marked-alt"></i></a>
+                    <a href="contact.html#map" aria-label="our location"> <i class="fas fa-map-marked-alt"></i></a>
                     <a href="https://twitter.com/" aria-label="Twitter" target="_blank" rel="noopener"><i class="fab fa-twitter-square"></i></a>
                     <a href="https://www.instagram.com/" aria-label="instagram" target="_blank" rel="noopener"><i class="fab fa-instagram-square"></i></a>
                     <a href="https://www.facebook.com/" aria-label="facebook" target="_blank" rel="noopener"><i class="fab fa-facebook-square"></i></a>
