--- a/contact.html
+++ b/contact.html
@@ -91,8 +91,8 @@
         <div class="container-fluid footer-row">
             <div class="row">
                 <div class="col-sm footer-element" id="contact-details">
-                    <span><a href="tel:0875553555">Call us: 0875553555<i class="fas fa-phone"></i></a></span><br>
-                    <span><a href="mailto:info@doggystyle.ie" target="_blank">Email: info@doggystyle.ie<i class="fas fa-envelope"></i></a></span>
+                    <span><a href="tel:0875553555" aria-label="Phone number click to call">Call us: 0875553555<i class="fas fa-phone"></i></a></span><br>
+                    <span><a href="mailto:info@doggystyle.ie" target="_blank" aria-label="Email">Email: info@doggystyle.ie<i class="fas fa-envelope"></i></a></span>
                 </div>
                 
                 <div class="col-sm call-button-container contact-page-button">
@@ -108,9 +108,9 @@
         </div>
     </footer>
 
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.min.js"></script>
     </div>
 </body></html>
 
