--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@ I used the code in this link to help me order the elements differently depending
         <div class="container-fluid footer-row">
             <div class="row">
                 <div class="col-sm footer-element" id="contact-details">
-                    <span><a href="tel:0875553555">Call us: 0875553555<i class="fas fa-phone"></i></a></span><br>
-                    <span><a href="mailto:info@doggystyle.ie" target="_blank">Email: info@doggystyle.ie<i class="fas fa-envelope"></i></a></span>
+                    <span><a href="tel:0875553555" aria-label="Phone number - click to call">Call us: 0875553555<i class="fas fa-phone"></i></a></span><br>
+                    <span><a href="mailto:info@doggystyle.ie" target="_blank" aria-label="Email">Email: info@doggystyle.ie<i class="fas fa-envelope"></i></a></span>
                 </div>
                 <div class="col-sm call-button-container">
                     <form action="contact.html" method="get">
