--- a/prices.html
+++ b/prices.html
@@ -49,12 +49,158 @@
 
     <!--Prices page -->
 
-    <div class="container-fluid main-prices">
+
+
+    <div class="row price-row">
+        <div class="services-banner">
+            <h1>Services</h1>
+            <hr>
+
+            <table>
+                <tbody>
+                    <tr>
+                        <td >
+                            <p><strong></strong></p>
+                        </td>
+                        <td >
+                            <p ><strong class="dogsize">Small</strong><br><i class="fas fa-dog fa-sm"></i></p>
+                        </td>
+                        <td>
+                            <p ><strong class="dogsize">Medium</strong><br><i class="fas fa-dog fa-lg"></i></p>
+                        </td>
+                        <td >
+                            <p ><strong class="dogsize">Large</strong><br><i class="fas fa-dog fa-2x"></i></p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <p><i class="fas fa-paw fa-xs"></i>Wash&amp;Dry</p>
+                        </td>
+                        <td>
+                            <p>€25</p>
+                        </td>
+                        <td>
+                            <p>€35</p>
+                        </td>
+                        <td>
+                            <p>€45</p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <p><i class="fas fa-paw fa-xs"></i>Nail Trimming and Filing</p>
+                        </td>
+                        <td>
+                            <p>€10</p>
+                        </td>
+                        <td>
+                            <p>€12</p>
+                        </td>
+                        <td>
+                            <p >€15</p>
+                        </td>
+
+                    </tr>
+                    <tr>
+                        <td>
+                            <p><i class="fas fa-paw fa-xs"></i>Nail Trimming, Ear Cleaning</p>
+                        </td>
+                        <td>
+                            <p>€15</p>
+                        </td>
+                        <td>
+                            <p>€18</p>
+                        </td>
+                        <td>
+                            <p>€25</p>
+                        </td>
+
+                    </tr>
+                    <tr>
+                        <td>
+                            <p><i class="fas fa-paw fa-xs"></i>Deshedding</p>
+                        </td>
+                        <td>
+                            <p>€15</p>
+                        </td>
+                        <td >
+                            <p>€20</p>
+                        </td>
+                        <td>
+                            <p>€25</p>
+                        </td>
+
+                    </tr>
+                    <tr>
+                        <td>
+                            <p><i class="fas fa-paw fa-xs"></i>Treatment Shampoo</p>
+                        </td>
+                        <td>
+                            <p>€5</p>
+                        </td>
+                        <td>
+                            <p>€7</p>
+                        </td>
+                        <td>
+                            <p>€10</p>
+                        </td>
+
+                    </tr>
+                    <tr>
+                        <td>
+                            <p><i class="fas fa-paw fa-xs"></i>Flea&nbsp;Treatment</p>
+                        </td>
+                        <td>
+                            <p>€10</p>
+                        </td>
+                        <td>
+                            <p>€15</p>
+                        </td>
+                        <td>
+                            <p>€20</p>
+                        </td>
+
+                    </tr>
+                    <tr>
+                        <td>
+                            <p><i class="fas fa-paw fa-xs"></i>**De-matt Service</p>
+                        </td>
+                        <td>
+                            <p >€35</p>
+                        </td>
+                        <td>
+                            <p>€35</p>
+                        </td>
+                        <td>
+                            <p>€35</p>
+                        </td>
+
+                    </tr>
+                    <tr>
+                        <td>
+                            <p><i class="fas fa-paw fa-xs"></i>**Hand stripping</p>
+                        </td>
+                        <td>
+                            <p>€35</p>
+                        </td>
+                        <td>
+                            <p>€35</p>
+                        </td>
+                        <td>
+                            <p>€35</p>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+
+     <div class="container-fluid main-prices">
         <div class="image-container">
             <img src="assets/images/pricesbone1.png" alt="dog bone with prices text">
             <p>Prices</p>
         </div>
-        <div class="row">
+        <div class="row price-row">
             <div class="list-unstyle prices-banner">
                 <ol>
                     <li>
@@ -280,6 +426,8 @@
             </div>
         </div>
     </div>
+
+
         <!-- I put this 'empty space div below the contact form as I was having a problem with scrolling
             as the bottom of the price container was dragging up white space instead of showing the background -->
     <div class="empty-space">
