--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                 <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
                     
-<!--I found this bit of code on stackoverflow which helped me understand how-->
+<!--I got this code on stackoverflow which helped me understand how-->
 <!--to display the active page link. https://stackoverflow.com/questions/   -->
 <!--17318170/highlighting-the-current-page-in-a-list-of-links-using-css-html -->
                     <li class="nav-item current">
@@ -54,9 +54,7 @@
         </nav>
     </header>
 
-    
     <!-- Home page-->
-
 
 <!--
 https://stackoverflow.com/questions/52324561/bootstrap-4-how-to-change-the-order-of-a-columns-when-the-screen-size-changes
@@ -77,7 +75,6 @@ I used the code in this link to help me order the elements differently depending
             <a href="gallery.html"><img src="assets/images/dogwash.png" alt="images of dogs being washed"></a>
         </div>
     </div>
-
 
     <!--Footer-->
 
