--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div id="logo">
+                <div class="logo">
                     <a href="index.html">
                         <img src="assets/images/dslogo.png" alt="Doggy Style logo image">
                     </a> 
@@ -61,16 +61,15 @@
                 <input class="input-box" type="text" id="dname" name="dogname" placeholder="Fur baby's name here.....">
 
                 <label for="phone">Phone number *</label>
-                <input class="input-box" type="tel" id="phone" name="phone" required>
+                <input class="input-box" type="tel" id="phone" name="phone" pattern="0[0-9]{9}" required>
 
                 <label for="email">Email *</label>
                 <input class="input-box" type="email" id="email" name="email" required>
 
                 <label for="comment">Comment</label>
-                <textarea class="input-box" id="comment" name="comment" placeholder="Tell us something about your floof ball..." style="height:200px"></textarea>
+                <textarea class="input-box" id="comment" name="comment" placeholder="Tell us something about your floof ball..." rows="6"></textarea>
 
                 <input class="submit-button" type="submit" value="Send">
-
             </form>
         </div>
 
@@ -90,14 +89,16 @@
     <footer>
         <div class="container-fluid footer-row">
             <div class="row">
-                <div class="col-sm footer-element" id="contact-details">
-                    <span><a href="tel:0875553555" aria-label="Phone number click to call">Call us: 0875553555<i class="fas fa-phone"></i></a></span><br>
-                    <span><a href="mailto:info@doggystyle.ie" target="_blank" aria-label="Email">Email: info@doggystyle.ie<i class="fas fa-envelope"></i></a></span>
+                <div class="col-sm footer-element contact-details">
+                    <span><a href="tel:0875553555" aria-label="Phone number click to call">Call us: 0875553555
+                    <i class="fas fa-phone"></i></a></span><br>
+                    <span><a href="mailto:info@doggystyle.ie" target="_blank" aria-label="Email">Email: info@doggystyle.ie
+                    <i class="fas fa-envelope"></i></a></span>
                 </div>
                 
                 <div class="col-sm call-button-container contact-page-button">
                 </div>
-                <div class="col-sm footer-element" id="social-icons">
+                <div class="col-sm footer-element social-icons">
                     <a href="contact.html#map" aria-label="our location"> <i class="fas fa-map-marked-alt"></i></a>
                     <a href="https://twitter.com/" aria-label="Twitter" target="_blank" rel="noopener"><i class="fab fa-twitter-square"></i></a>
                     <a href="https://www.instagram.com/" aria-label="instagram" target="_blank" rel="noopener"><i class="fab fa-instagram-square"></i></a>
