--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,9 @@
 
         <!--Contact page -->
 
-        <div class="form-container">
+        <div class="home-container contact-page">
+            
+            <div class=" form-container order-2">
             <form action="#">
 
                 <label for="fname">First Name *</label>
@@ -75,11 +77,12 @@
 
         <!-- Google map location - iframe-->
 
-        <div class="map form-container" id="map">
+        <div class="map form-container order-2" id="map">
             <h1>Our Location</h1>
             <p>DoggyStyle Ltd.<br>No.1 Main Street,<br>Phibsborough,<br>Dublin 7</p>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d9524.276514564774!2d-6.281154660859138!3d53.35991773539866!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48670dd46b325a31%3A0x2600c7a7bb391652!2sPhibsborough%2C%20Dublin!5e0!3m2!1sen!2sie!4v1605958559989!5m2!1sen!2sie" width="600" height="450" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0">
             </iframe>
+        </div>
         </div>
         <!-- I put this 'empty space div below the contact form as I was having a problem with scrolling
             as the bottom of the contact form was dragging up white space instead of showing the background -->
