Fix resizing issue below 768px

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     https://stackoverflow.com/questions/52324561/bootstrap-4-how-to-change-the-order-of-a-columns-when-the-screen-size-changes
     I used the code in this link to help me order the elements differently depending on the page size -->
 
-    <div class="home-container">
+    <div class="home-container index-page">
         <div class="main-message order-2 order-md-1">
                 <h1>Grubby Dog?</h1>
                 <p>We’ll get them clean in a jiffy!</p><br><hr><p>Leave your fur baby  with us for the ultimate doggy day spa experience.
