Fix table view on very small mobile screen <350px

--- a/prices.html
+++ b/prices.html
@@ -60,14 +60,14 @@
                 </div>
                 <div class="row services-row">
                     <div class="col-5"></div>
-                    <div class="col">
-                        <p><i class="fas fa-dog fa-sm"></i></p>
+                    <div class="col align-bottom dog-size">
+                        <p><i class="align-bottom fas fa-dog fa-sm"></i></p>
                     </div>
-                    <div class="col">
+                    <div class="col align-bottom dog-size">
                         <p><i class="fas fa-dog fa-lg"></i></p>
                     </div>
-                    <div class="col">
-                        <p><i class="fas fa-dog fa-2x"></i></p>
+                    <div class="col align-bottom dog-size">
+                        <p><i class=" fas fa-dog fa-2x"></i></p>
                     </div>
                 </div>
                 <div class="row services-row">
