--- a/prices.html
+++ b/prices.html
@@ -200,10 +200,8 @@
                     <div class="prices-column">
                         <ol>
                             <li>
-                                <div class="list-item"><span><i class="fas fa-paw fa-xs"></i> Airedale Terrier</span><span>€70</span></div>
-                            </li>
-                            <li>
-                                <div class="list-item"><span><i class="fas fa-paw fa-xs"></i> Airedale Terrier</span><span>€70</span></div>
+                                <div class="list-item">
+                                    <span><i class="fas fa-paw fa-xs"></i> Airedale Terrier</span><span>€70</span></div>
                             </li>
                             <li>
                                 <div class="list-item"><span><i class="fas fa-paw fa-xs"></i> Akita</span><span>€80</span></div>
@@ -423,9 +421,7 @@
                 </div>
             </div>
         </div>
-
     </div>
-
 
     <!-- Footer-->
     <footer>
