Change to container class for better sizing on large screens

--- a/prices.html
+++ b/prices.html
@@ -187,7 +187,7 @@
         </div>
     </div>
 
-    <div class="container-fluid main-prices">
+    <div class="container main-prices">
         <div class="prices-banner">
             <div class="row price-row">
                 <div class="col">
