--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
         <header>
             <!-- Navbar - Bootstrap -->
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <a class="navbar-brand ml-auto" href="#"></a>
+                <a class="navbar-brand ml-auto" aria-label="navbar" href="#"></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -60,7 +60,7 @@
                 <label for="lname">Last Name *</label>
                 <input class="input-box" type="text" id="lname" name="lastname" placeholder="Your last name.." required>
                 
-                <label for="lname">Dogs Name</label>
+                <label for="dname">Dogs Name</label>
                 <input class="input-box" type="text" id="dname" name="dogname" placeholder="Fur baby's name here.....">
 
                 <label for="phone">Phone number *</label>
@@ -78,10 +78,10 @@
 
         <!-- Google map location - iframe-->
 
-        <div class="map form-container order-2" id="map">
+        <div class="map form-container order-2" id="map" >
             <h2>Our Location</h2>
             <p>DoggyStyle Ltd.<br>No.1 Main Street,<br>Phibsborough,<br>Dublin 7</p>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d9524.276514564774!2d-6.281154660859138!3d53.35991773539866!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48670dd46b325a31%3A0x2600c7a7bb391652!2sPhibsborough%2C%20Dublin!5e0!3m2!1sen!2sie!4v1605958559989!5m2!1sen!2sie" width="600" height="450" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d9524.276514564774!2d-6.281154660859138!3d53.35991773539866!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48670dd46b325a31%3A0x2600c7a7bb391652!2sPhibsborough%2C%20Dublin!5e0!3m2!1sen!2sie!4v1605958559989!5m2!1sen!2sie" width="600" height="450" style="border:0;" allowfullscreen="" aria-hidden="false" aria-label="map location" tabindex="0">
             </iframe>
         </div>
         </div>
