--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <!--Navbar Bootstrap-->
 
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand ml-auto" aria-label="navbar" href="index.html" aria-label="navbar"></a>
+            <a class="navbar-brand ml-auto" aria-label="navbar" href="index.html"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
