--- a/gallery.html
+++ b/gallery.html
@@ -108,7 +108,9 @@
             </div>
         </div>
     </footer>
+
     <script src="assets/js/lightbox-plus-jquery.min.js"></script>
+    <script>lightbox.option({'alwaysShowNavOnTouchDevices': true})</script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.min.js"></script>
