Check spelling and formatting of CSS and HTML

--- a/gallery.html
+++ b/gallery.html
@@ -51,7 +51,7 @@
         
     <div class="home-container gallery-container">
         <div class="image-container gallery-title">
-            <img src="assets/images/pricesbone1.png" alt="dog bone with gallery text">
+            <img src="assets/images/pricesbone1.png" alt="dog bone with gallery title">
             <p>Gallery</p>
         </div>
         <div class="gallery">
@@ -60,29 +60,114 @@
             and the following tutorial by Clever Techie to help me create the gallery 
             https://clevertechie.com/html-css/157/how-to-create-image-gallery-using-html-css-javascript -->
             
-            <div class="responsive"><a href="assets/images/gallery/dog1big.jpg" data-lightbox="mygallery"><img src="assets/images/gallery/dog1small.jpg" alt="Dog in bath"></a></div>
-            <div class="responsive"><a href="assets/images/gallery/dog2big.jpg" data-lightbox="mygallery"><img src="assets/images/gallery/dog2small.jpg" alt="Dog in towel"></a></div>
-            <div class="responsive"><a href="assets/images/gallery/dog3big.jpg" data-lightbox="mygallery"><img src="assets/images/gallery/dog3small.jpg" alt="Dog getting showered"></a></div>
-            <div class="responsive"><a href="assets/images/gallery/derek2big.jpg" data-lightbox="mygallery"><img src="assets/images/gallery/derek2small.jpg" alt="happy dog"></a></div>
-            <div class="responsive"><a href="assets/images/gallery/dog4big.jpg" data-lightbox="mygallery"><img src="assets/images/gallery/dog4small.jpg" alt="grey small dog"></a></div>
-            <div class="responsive"><a href="assets/images/gallery/derek5big.jpg" data-lightbox="mygallery"><img src="assets/images/gallery/derek5small.jpg" alt="goofy dog"></a></div>
-            <div class="responsive"><a href="assets/images/gallery/dog5big.jpg" data-lightbox="mygallery"><img src="assets/images/gallery/dog5small.jpg" alt="woman showering dog in bath"></a></div>
-            <div class="responsive"><a href="assets/images/gallery/dog6big.jpg" data-lightbox="mygallery"><img src="assets/images/gallery/dog6small.jpg" alt="small dog in bath"></a></div>
-            <div class="responsive"><a href="assets/images/gallery/dog7big.jpg" data-lightbox="mygallery"><img src="assets/images/gallery/dog7small.jpg" alt="brown dog in bath"></a></div>
-            <div class="responsive"><a href="assets/images/gallery/dog8big.jpg" data-lightbox="mygallery"><img src="assets/images/gallery/dog8small.jpg" alt="unhappy wet dog"></a></div>
-            <div class="responsive hideforsymmetry"><a href="assets/images/gallery/dog9big.jpg" data-lightbox="mygallery"><img src="assets/images/gallery/dog9small.jpg" alt="small white toy dog"></a></div>
-            <div class="responsive"><a href="assets/images/gallery/dog10big.jpg" data-lightbox="mygallery"><img src="assets/images/gallery/dog10small.jpg" alt="small dog"></a></div>
-            <div class="responsive"><a href="assets/images/gallery/derek1big.jpg" data-lightbox="mygallery"><img src="assets/images/gallery/derek1small.jpg" alt="dog in water"></a></div>
-            <div class="responsive"><a href="assets/images/gallery/derek3big.jpg" data-lightbox="mygallery"><img src="assets/images/gallery/derek3small.jpg" alt="dog panting"></a></div>
-            <div class="responsive"><a href="assets/images/gallery/jade1big.jpg" data-lightbox="mygallery"><img src="assets/images/gallery/jade1small.jpg" alt="black and white collie"></a></div>
-            <div class="responsive"><a href="assets/images/gallery/derek4big.jpg" data-lightbox="mygallery"> <img src="assets/images/gallery/derek4small.jpg" alt="dog in field of flowers"></a></div>
-            <div class="responsive"><a href="assets/images/gallery/penny1big.jpg" data-lightbox="mygallery"> <img src="assets/images/gallery/penny1small.jpg" alt="brown and white collie"></a></div>
-            <div class="responsive"><a href="assets/images/gallery/lassie1big.jpg" data-lightbox="mygallery"> <img src="assets/images/gallery/lassie1small.jpg" alt="collie dog close up shot"></a></div>
-            <div class="responsive"><a href="assets/images/gallery/lassie2big.jpg" data-lightbox="mygallery"> <img src="assets/images/gallery/lassie2small.jpg" alt="2 collie dogs in field with rainbow"></a></div>
-            <div class="responsive"><a href="assets/images/gallery/jackson1big.jpg" data-lightbox="mygallery"> <img src="assets/images/gallery/jackson1small.jpg" alt="small blonde dog on patio"></a></div>
-            <div class="responsive"><a href="assets/images/gallery/jackson2big.jpg" data-lightbox="mygallery"> <img src="assets/images/gallery/jackson2small.jpg" alt="small blonde dog with hat"></a></div> 
+            <div class="responsive">
+                <a href="assets/images/gallery/dog1big.jpg" data-lightbox="mygallery">
+                <img src="assets/images/gallery/dog1small.jpg" alt="Dog in bath">
+                </a>
+            </div>
+            <div class="responsive">
+                <a href="assets/images/gallery/dog2big.jpg" data-lightbox="mygallery">
+                <img src="assets/images/gallery/dog2small.jpg" alt="Dog in towel">
+                </a>
+            </div>
+            <div class="responsive">
+                <a href="assets/images/gallery/dog3big.jpg" data-lightbox="mygallery">
+                <img src="assets/images/gallery/dog3small.jpg" alt="Dog getting showered">
+                </a>
+            </div>
+            <div class="responsive">
+                <a href="assets/images/gallery/derek2big.jpg" data-lightbox="mygallery">
+                <img src="assets/images/gallery/derek2small.jpg" alt="happy dog">
+                </a>
+            </div>
+            <div class="responsive">
+                <a href="assets/images/gallery/dog4big.jpg" data-lightbox="mygallery">
+                <img src="assets/images/gallery/dog4small.jpg" alt="grey small dog">
+                </a>
+            </div>
+            <div class="responsive">
+                <a href="assets/images/gallery/derek5big.jpg" data-lightbox="mygallery">
+                <img src="assets/images/gallery/derek5small.jpg" alt="goofy dog">
+                </a>
+            </div>
+            <div class="responsive">
+                <a href="assets/images/gallery/dog5big.jpg" data-lightbox="mygallery">
+                <img src="assets/images/gallery/dog5small.jpg" alt="woman showering dog in bath">
+                </a>
+            </div>
+            <div class="responsive">
+                <a href="assets/images/gallery/dog6big.jpg" data-lightbox="mygallery">
+                <img src="assets/images/gallery/dog6small.jpg" alt="small dog in bath">
+                </a>
+            </div>
+            <div class="responsive">
+                <a href="assets/images/gallery/dog7big.jpg" data-lightbox="mygallery">
+                <img src="assets/images/gallery/dog7small.jpg" alt="brown dog in bath">
+                </a>
+            </div>
+            <div class="responsive">
+                <a href="assets/images/gallery/dog8big.jpg" data-lightbox="mygallery">
+                <img src="assets/images/gallery/dog8small.jpg" alt="unhappy wet dog">
+                </a>
+            </div>
+            <div class="responsive hideforsymmetry">
+                <a href="assets/images/gallery/dog9big.jpg" data-lightbox="mygallery">
+                <img src="assets/images/gallery/dog9small.jpg" alt="small white toy dog">
+                </a>
+            </div>
+            <div class="responsive">
+                <a href="assets/images/gallery/dog10big.jpg" data-lightbox="mygallery">
+                <img src="assets/images/gallery/dog10small.jpg" alt="small dog">
+                </a>
+            </div>
+            <div class="responsive">
+                <a href="assets/images/gallery/derek1big.jpg" data-lightbox="mygallery">
+                <img src="assets/images/gallery/derek1small.jpg" alt="dog in water">
+                </a>
+            </div>
+            <div class="responsive">
+                <a href="assets/images/gallery/derek3big.jpg" data-lightbox="mygallery">
+                <img src="assets/images/gallery/derek3small.jpg" alt="dog panting">
+                </a>
+            </div>
+            <div class="responsive">
+                <a href="assets/images/gallery/jade1big.jpg" data-lightbox="mygallery">
+                <img src="assets/images/gallery/jade1small.jpg" alt="black and white collie">
+                </a>
+            </div>
+            <div class="responsive">
+                <a href="assets/images/gallery/derek4big.jpg" data-lightbox="mygallery">
+                <img src="assets/images/gallery/derek4small.jpg" alt="dog in field of flowers">
+                </a>
+            </div>
+            <div class="responsive">
+                <a href="assets/images/gallery/penny1big.jpg" data-lightbox="mygallery">
+                <img src="assets/images/gallery/penny1small.jpg" alt="brown and white collie">
+                </a>
+            </div>
+            <div class="responsive">
+                <a href="assets/images/gallery/lassie1big.jpg" data-lightbox="mygallery">
+                <img src="assets/images/gallery/lassie1small.jpg" alt="collie dog close up shot">
+                </a>
+            </div>
+            <div class="responsive">
+                <a href="assets/images/gallery/lassie2big.jpg" data-lightbox="mygallery">
+                <img src="assets/images/gallery/lassie2small.jpg" alt="2 collie dogs in field with rainbow">
+                </a>
+            </div>
+            <div class="responsive">
+                <a href="assets/images/gallery/jackson1big.jpg" data-lightbox="mygallery">
+                <img src="assets/images/gallery/jackson1small.jpg" alt="small blonde dog on patio">
+                </a>
+            </div>
+            <div class="responsive">
+                <a href="assets/images/gallery/jackson2big.jpg" data-lightbox="mygallery">
+                <img src="assets/images/gallery/jackson2small.jpg" alt="small blonde dog with hat">
+                </a>
+            </div> 
         </div>
     </div>
+
     <!-- Footer-->
     <footer>
         <div class="container-fluid footer-row">
