--- a/index.html
+++ b/index.html
@@ -53,20 +53,19 @@
     </header>
 
     <!-- Home page-->
-
     <!--
     https://stackoverflow.com/questions/52324561/bootstrap-4-how-to-change-the-order-of-a-columns-when-the-screen-size-changes
-    I used the code in this link to help me order the elements differently depending on the page size -->
+    I used the code in this link to help me order the elements -->
 
     <div class="home-container index-page">
         <div class="main-message order-2 order-md-1">
-                <h1>Grubby Dog?</h1>
-                <p>We’ll get them clean in a jiffy!</p><br><hr><p>Leave your fur baby  with us for the ultimate doggy day spa experience.
-                </p><br><hr> <p>Guaranteed to leave with a
-                wagging tail.</p> <br>
-                <i class="fas fa-shower"></i><i class="fas fa-cut"></i>
+            <h1>Grubby Dog?</h1>
+            <p>We’ll get them clean in a jiffy!</p><br><hr><p>Leave your fur baby  with us for the ultimate doggy day spa experience.
+            </p><br><hr> <p>Guaranteed to leave with a
+            wagging tail.</p> <br>
+            <i class="fas fa-shower"></i><i class="fas fa-cut"></i>
             <form action="contact.html" method="get" >
-                <input type="submit" class="call-button" value="Make Appointment"/>
+            <input type="submit" class="call-button" value="Make Appointment"/>
             </form>  
         </div>
         <div class="splash-image order-1 order-md-2">
@@ -75,8 +74,7 @@
     </div>
 
     <!--Footer-->
-
-<footer>
+    <footer>
         <div class="container-fluid footer-row">
             <div class="row">
                 <div class="col-sm footer-element contact-details">
@@ -91,11 +89,13 @@
                     </form> 
                 </div>
                 <div class="col-sm footer-element social-icons">
-                    <a href="contact.html#map" aria-label="our location"> <i class="fas fa-map-marked-alt"></i></a>
+                    <a href="contact.html#map" aria-label="our location"> 
+                    <i class="fas fa-map-marked-alt"></i></a>
                     <a href="https://twitter.com/" aria-label="Twitter" target="_blank" rel="noopener"><i class="fab fa-twitter-square"></i></a>
                     <a href="https://www.instagram.com/" aria-label="instagram" target="_blank" rel="noopener"><i class="fab fa-instagram-square"></i></a>
                     <a href="https://www.facebook.com/" aria-label="facebook" target="_blank" rel="noopener"><i class="fab fa-facebook-square"></i></a>
-                    <a href="https://www.youtube.com/" aria-label="youtube" target="_blank" rel="noopener"><i class="fab fa-youtube" ></i></a>
+                    <a href="https://www.youtube.com/" aria-label="youtube" target="_blank" rel="noopener"><i class="fab fa-youtube">
+                    </i></a>
                 </div>
             </div>
         </div>
