--- a/prices.html
+++ b/prices.html
@@ -47,7 +47,6 @@
     </header>
 
     <!--Prices page -->
-
     <div class="price-page-container">
         <div class="container services-container">
             <div class="row services-banner">
@@ -61,18 +60,18 @@
                     <div class="row services-row">
                         <div class="col-5"></div>
                         <div class="col align-bottom dog-size">
-                            <p><i class="align-bottom fas fa-dog fa-sm"></i></p>
+                            <p><i class="align-bottom fas fa-dog fa-sm" aria-label="Small Dog"></i></p>
                         </div>
                         <div class="col align-bottom dog-size">
                             <p><i class="fas fa-dog fa-lg"></i></p>
                         </div>
                         <div class="col align-bottom dog-size">
-                            <p><i class=" fas fa-dog fa-2x"></i></p>
+                            <p><i class=" fas fa-dog fa-2x" aria-label="Medium Dog"></i></p>
                         </div>
                     </div>
                     <div class="row services-row">
                         <div class="col-5">
-                            <p><i class="fas fa-paw fa-xs"></i>Wash&amp;Dry</p>
+                            <p><i class="fas fa-paw fa-xs" aria-label="Large Dog"></i>Wash&amp;Dry</p>
                         </div>
                         <div class="col">
                             <p>€25</p>
@@ -128,7 +127,8 @@
                     </div>
                     <div class="row services-row">
                         <div class="col-5">
-                            <p><i class="fas fa-paw fa-xs"></i>Treatment Shampoo</p>
+                            <p><i class="fas fa-paw fa-xs"></i>
+                            Treatment Shampoo</p>
                         </div>
                         <div class="col">
                             <p>€5</p>
@@ -142,7 +142,8 @@
                     </div>
                     <div class="row services-row">
                         <div class="col-5">
-                            <p><i class="fas fa-paw fa-xs"></i>Flea Treatment</p>
+                            <p><i class="fas fa-paw fa-xs"></i>
+                            Flea Treatment</p>
                         </div>
                         <div class="col">
                             <p>€10</p>
@@ -156,8 +157,8 @@
                     </div>
                     <div class="row services-row">
                         <div class="col-5">
-                            <p><i class="fas fa-paw fa-xs"></i>De-matt service
-                            </p>
+                            <p><i class="fas fa-paw fa-xs"></i>
+                            De-matt service</p>
                         </div>
                         <div class="col">
                             <p>€35</p>
@@ -171,7 +172,8 @@
                     </div>
                     <div class="row services-row">
                         <div class="col-5">
-                            <p><i class="fas fa-paw fa-xs"></i>Hand Stripping</p>
+                            <p><i class="fas fa-paw fa-xs"></i>
+                            Hand Stripping</p>
                         </div>
                         <div class="col">
                             <p>€35</p>
@@ -197,6 +199,7 @@
                 </div>
                 <div class="row">
                     <div class="col">
+                    <!--I used the explanation here to help with flex-grow of dotted lines between spans https://stackoverflow.com/questions/4898287/how-to-display-text-a-dotted-line-then-more-text-spanning-the-width-of-the-page-->
                         <div class="prices-column">
                             <ol>
                                 <li>
@@ -423,6 +426,7 @@
             </div>
         </div>
     </div>
+
     <!-- Footer-->
     <footer>
         <div class="container-fluid footer-row">
@@ -435,7 +439,7 @@
                 </div>
                 <div class="col-sm call-button-container">
                     <form action="contact.html" method="get">
-                        <input type="submit" class="call-button" value="Contact DoggyStyle" aria-label="Contact Doggystyle" />
+                        <input type="submit" class="call-button" value="Contact DoggyStyle" aria-label="Contact Doggystyle"/>
                     </form>
                 </div>
                 <div class="col-sm footer-element social-icons">
