Fix formatting in services sectin

--- a/prices.html
+++ b/prices.html
@@ -127,8 +127,7 @@
                     </div>
                     <div class="row services-row">
                         <div class="col-5">
-                            <p><i class="fas fa-paw fa-xs"></i>
-                            Treatment Shampoo</p>
+                            <p><i class="fas fa-paw fa-xs"></i>Treatment Shampoo</p>
                         </div>
                         <div class="col">
                             <p>€5</p>
@@ -142,8 +141,7 @@
                     </div>
                     <div class="row services-row">
                         <div class="col-5">
-                            <p><i class="fas fa-paw fa-xs"></i>
-                            Flea Treatment</p>
+                            <p><i class="fas fa-paw fa-xs"></i>Flea Treatment</p>
                         </div>
                         <div class="col">
                             <p>€10</p>
@@ -157,8 +155,7 @@
                     </div>
                     <div class="row services-row">
                         <div class="col-5">
-                            <p><i class="fas fa-paw fa-xs"></i>
-                            De-matt service</p>
+                            <p><i class="fas fa-paw fa-xs"></i>De-matt service</p>
                         </div>
                         <div class="col">
                             <p>€35</p>
@@ -172,8 +169,7 @@
                     </div>
                     <div class="row services-row">
                         <div class="col-5">
-                            <p><i class="fas fa-paw fa-xs"></i>
-                            Hand Stripping</p>
+                            <p><i class="fas fa-paw fa-xs"></i>Hand Stripping</p>
                         </div>
                         <div class="col">
                             <p>€35</p>
