Udate 404 pages text

--- a/404.html
+++ b/404.html
@@ -55,8 +55,18 @@
     I used the code in this link to help me order the elements -->
 
     <div class="home-container index-page">
-        <div class="help-image order-1 order-md-2">
-            <a href="index.html"><img src="assets/images/404.png" alt="images of dogs being washed"></a>
+        <div class="main-message order-2 order-md-1">
+            <h1>Grubby Dog?</h1>
+            <p>We’ll get them clean in a jiffy!</p><br><hr><p>Leave your fur baby  with us for the ultimate doggy day spa experience.
+            </p><br><hr> <p>Guaranteed to leave with a
+            wagging tail.</p> <br>
+            <i class="fas fa-shower"></i><i class="fas fa-cut"></i>
+            <form action="contact.html" method="get">
+            <input type="submit" class="call-button" value="Make Appointment">
+            </form>  
+        </div>
+        <div class="splash-image order-1 order-md-2">
+            <a href="gallery.html"><img src="assets/images/dogwash.png" alt="images of dogs being washed"></a>
         </div>
     </div>
 
